[gd_scene load_steps=2 format=3 uid="uid://bh8bnc5s70wo6"]

[ext_resource type="Script" path="res://UI/Dialogs/DeletePaletteDialog.gd" id="2"]

[node name="DeletePaletteDialog" type="MarginContainer"]
custom_minimum_size = Vector2(512, 140)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12
script = ExtResource("2")

[node name="Container" type="Control" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Container"]
layout_mode = 0
anchor_right = 1.0
offset_bottom = 21.0
text = "DELETE_PALETTE_DIALOG_TEXT"

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -25.0
size_flags_vertical = 0

[node name="DeleteButton" type="Button" parent="Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "DELETE"

[node name="CancelButton" type="Button" parent="Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "CANCEL"

[connection signal="pressed" from="Container/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="Container/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
